# ptywrapper

./: README.md  config.sample.yaml  pyproject.toml  ~$cal PTY Shell Wrapper for Cyber Range AI Context.docx
src/cyber_shell/: assembler.py  chat_client.py  cli.py  config.py  logging_utils.py  markdown_terminal.py  mcp_client.py  mock_endpoint.py  rcfile.py  repl.py  shell_wrapper.py
tests/: test_assembler.py  test_config.py
